fix image distortion on mobile in css

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -136,10 +136,9 @@
 }
 
 .group__item-image {
-  margin-right: 15px;
-  max-width: 35%;
+  margin-right: 20px;
+  width: auto;
   max-height: 250px;
-  height: auto;
 }
 
 .group__item-content{
